--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
@@ -21,16 +24,17 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
-    "@types/pg": "^8.6.5",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^3.6.3",
+    "@types/pg": "^8.6.5",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
+    "nodemon": "^2.0.20",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9"
   }
