--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
@@ -30,6 +31,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
