--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
+    "build": "tsc",
     "start": "nodemon src/server",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "jasmine-ts",
-    "build": "tsc"
+    "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
+    "lint": "eslint src/**",
+    "jasmine": "jasmine",
+    "test": "jasmine-ts"
   },
   "author": "Udacity",
   "license": "ISC",
@@ -33,11 +36,19 @@
     "@types/jasmine": "^3.6.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
     "nodemon": "^2.0.20",
     "ts-node": "^9.1.1",
-    "tsc-watch": "^4.2.9"
+    "tsc-watch": "^4.2.9",
+    "prettier": "^2.7.1",
+    "supertest": "^6.3.1"
   }
 }
