--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "storefront_backend",
-  "version": "0.1.0",
-  "description": "",
-  "main": "server.ts",
-  "scripts": {
-    "build": "tsc",
-    "start": "nodemon src/server",
-    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
-    "lint": "eslint src/**",
-    "jasmine": "jasmine",
-    "test": "jasmine-ts"
-  },
-  "author": "Udacity",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "db-migrate": "^0.11.13",
-    "db-migrate-pg": "^1.2.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.9",
-    "@types/jasmine": "^3.6.3",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/pg": "^8.6.5",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jasmine": "^3.6.4",
-    "jasmine-spec-reporter": "^6.0.0",
-    "jasmine-ts": "^0.3.0",
-    "nodemon": "^2.0.20",
-    "ts-node": "^9.1.1",
-    "tsc-watch": "^4.2.9",
-    "prettier": "^2.7.1",
-    "supertest": "^6.3.1"
-  }
+    "name": "storefront_backend",
+    "version": "0.1.0",
+    "description": "",
+    "main": "server.ts",
+    "scripts": {
+        "build": "tsc",
+        "start": "nodemon src/server",
+        "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
+        "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
+        "lint": "eslint src/**",
+        "jasmine": "jasmine",
+        "test": "cross-env ENV=test jasmine-ts --random=false"
+    },
+    "author": "Udacity",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
+        "db-migrate": "^0.11.13",
+        "db-migrate-pg": "^1.2.2",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
+        "pg": "^8.8.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.8.4"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/body-parser": "^1.19.2",
+        "@types/cors": "^2.8.12",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.9",
+        "@types/jasmine": "^3.6.3",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/pg": "^8.6.5",
+        "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^5.42.0",
+        "@typescript-eslint/parser": "^5.42.0",
+        "cross-env": "^7.0.3",
+        "eslint": "^8.26.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "jasmine": "^3.6.4",
+        "jasmine-spec-reporter": "^6.0.0",
+        "jasmine-ts": "^0.3.0",
+        "nodemon": "^2.0.20",
+        "prettier": "^2.7.1",
+        "supertest": "^6.3.1",
+        "ts-node": "^9.1.1",
+        "tsc-watch": "^4.2.9"
+    }
 }
