--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ HOST=127.0.0.1
 DATABASE=my_store
 TEST_DATABASE=my_store_test
 USER=postgres
-PASSWORD=2717
+PASSWORD=
 SECRET=asjdfklasjf7234823748&*@
